# coup

./: .gitignore  CMakeLists.txt  Game.cpp  README.md  coup_test_registry.ods  example.py  transform_data_to_embedding.py
include/: coup.hpp
python/: user.py
src/: bindings.cpp  coup.cpp  game_env.cpp  game_logic.cpp  game_logic.h  main.cpp
tests/: coup_test.cpp
tests/python/: test_bindings.py
